BUgfix. In IE10 and IE11, the menu got cut off at 30px.
Tested this fix in IE8-10, latest chrome 35 and FF nightly

--- a/plonetheme/nuplone/skin/templates/style/main/base.css
+++ b/plonetheme/nuplone/skin/templates/style/main/base.css
@@ -1010,7 +1010,7 @@ object#siteMenu {
 	top: 0;
 	right: 0;
 	border-style: none;
-	height: 30px;
+	height: 100%;
 	overflow: hidden;
 	width: 500px;
 	z-index: 2000;
